# sys-proxy-bar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  check.bat  generate_resources.py  pixi.toml
src/: http_server.cpp  http_server.h  main.cpp  proxy_manager.cpp  proxy_manager.h  resource.h  resource.rc  settings_dialog.cpp  settings_dialog.h  tray_icon.cpp  tray_icon.h  webui.rc  webui_resource.h
tools/: mihomo_embed.py
tools/mihomo/: mihomo.manifest
